Ensure lambda roles are set up correctly
Namespace in role's policy permissions must match the namespace in the
parameter store or it won't have access to read the params

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ provider:
       Action:
         - ssm:DescribeParameters
         - ssm:GetParameters
-      Resource: "arn:aws:ssm:${opt:region, self:provider.region}:*:parameter/kpopper.github.io/oauth/${opt:stage, self:provider.stage}/*"
+      Resource: "arn:aws:ssm:${opt:region, self:provider.region}:*:parameter/iankynnersley.co.uk/oauth/${opt:stage, self:provider.stage}/*"
     - Effect: Allow
       Action:
         - kms:Decrypt
